Add a few integration tests - only Metrics and Inventory so far (#3)
Add a few integration tests - only Metrics and Inventory so far